// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftStartSelection > renders correctly if nextShiftName and plannedShiftRangeInfo exists 1`] = `
<v-card-text-stub
  class="px-4 py-2"
  tag="div"
>
  <v-row-stub
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      class="pr-2"
      cols="12"
      lg="false"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <clickable-card-stub
        btntext="Start_verb"
        content="Shift can be started between,13:00 - 13:15 (23.04)"
        title="Manual shift"
      />
    </v-col-stub>
    <v-col-stub
      class="pl-2"
      cols="12"
      lg="false"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <clickable-card-stub
        btntext="Start early"
        content="Planned shift,17:00 - 22:00 (23.04)"
        title="Evening shift"
      />
    </v-col-stub>
  </v-row-stub>
</v-card-text-stub>
`;

exports[`ShiftStartSelection > renders correctly if nextShiftName is missing 1`] = `
<v-card-text-stub
  class="px-4 py-2"
  tag="div"
>
  <v-row-stub
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      class="pr-2"
      cols="12"
      lg="false"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <clickable-card-stub
        btntext="Start_verb"
        content="Shift can be started between,13:00 - 13:15 (23.04)"
        title="Manual shift"
      />
    </v-col-stub>
    <v-col-stub
      class="pl-2"
      cols="12"
      lg="false"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-card-stub
        border="false"
        class="fill-height"
        density="default"
        disabled="false"
        exact="false"
        flat="false"
        hover="false"
        loading="false"
        replace="false"
        ripple="true"
        tag="div"
        tile="false"
        variant="elevated"
      >
        <v-card-text-stub
          class="fill-height d-flex flex-column align-center justify-center text-center"
          tag="div"
        >
          <span
            class="text-body-large font-weight-medium pb-2"
          >
            Planned shift
          </span>
          <span>
            No shifts scheduled in next 24 hours
          </span>
        </v-card-text-stub>
      </v-card-stub>
    </v-col-stub>
  </v-row-stub>
</v-card-text-stub>
`;

exports[`ShiftStartSelection > renders correctly if nextShiftStartFromRequest is later than maxEndFromRequest 1`] = `
<v-card-text-stub
  class="px-4 py-2"
  tag="div"
>
  <v-row-stub
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      class="pr-2"
      cols="12"
      lg="false"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <clickable-card-stub
        btntext="Start_verb"
        content="Shift can be started between,13:00 - 13:15 (23.04)"
        title="Manual shift"
      />
    </v-col-stub>
    <v-col-stub
      class="pl-2"
      cols="12"
      lg="false"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-card-stub
        border="false"
        class="fill-height"
        density="default"
        disabled="false"
        exact="false"
        flat="false"
        hover="false"
        loading="false"
        replace="false"
        ripple="true"
        tag="div"
        tile="false"
        variant="elevated"
      >
        <v-card-text-stub
          class="fill-height d-flex flex-column align-center justify-center text-center"
          tag="div"
        >
          <span
            class="text-body-large font-weight-medium pb-2"
          >
            Planned shift
          </span>
          <span>
            No shifts scheduled in next 24 hours
          </span>
        </v-card-text-stub>
      </v-card-stub>
    </v-col-stub>
  </v-row-stub>
</v-card-text-stub>
`;

exports[`ShiftStartSelection > renders correctly in mobile view 1`] = `
<v-card-text-stub
  class="px-4 py-2"
  tag="div"
>
  <v-row-stub
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      class="pb-2"
      cols="12"
      lg="false"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <clickable-card-stub
        btntext="Start_verb"
        content="Shift can be started between,13:00 - 13:15 (23.04)"
        title="Manual shift"
      />
    </v-col-stub>
    <v-col-stub
      class="mt-2"
      cols="12"
      lg="false"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <clickable-card-stub
        btntext="Start early"
        content="Planned shift,17:00 - 22:00 (23.04)"
        title="Evening shift"
      />
    </v-col-stub>
  </v-row-stub>
</v-card-text-stub>
`;
